# MonitoringSystemRos2

droneinterfaces/: CMakeLists.txt
install/: local_setup.sh  setup.sh
install/droneinterfaces/share/droneinterfaces/: local_setup.sh  package.sh
install/droneutility/lib/droneutility/: drone  dronemanager
install/droneutility/share/droneutility/: package.sh
log/: latest_build
src/: 0122.keyframes  0122.mappoints  0122.yaml  0215.keyframes  0215.mappoints  0215.yaml  0414.keyframes  0414.mappoints  0414.yaml  MonitoringSystem.sh  TelloSetupAp.py  kill.sh  map1.keyframes  map1.mappoints  map1.yaml  ros2_setup.sh  setting.yaml  tello.yaml
src/droneinterfaces/: CMakeLists.txt  package.xml
src/droneinterfaces/msg/: FrameArray.msg  HumanBox.msg  PositionArray.msg  TargetLocation.msg
src/droneinterfaces/srv/: DroneMap.srv
src/droneutility/: CMakeLists.txt  package.xml
src/droneutility/include/: drone.hpp  droneManager.hpp  h264decoder.hpp  pid.hpp  v2p.hpp
src/droneutility/src/: drone.cpp  droneManager.cpp  pid.cpp  recv.cpp  send.cpp  v2p.cpp
src/humandetection/: package.xml  setup.cfg  setup.py
src/humanpose/: package.xml  setup.cfg  setup.py
src/humanpose/humanpose/: estimater.py
src/humanpose/humanpose/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/humanpose/humanpose/log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/droneutility/lib/droneutility/: drone  (+1 more)
src/log/: latest_build
src/log/2022-March-25-22:34:32/T2-2022-March-25-22:36:03/: position_t2.txt
src/log/2022-March-26-16:58:19/T1-2022-March-26-17:01:02/: position_t1.txt  targetlocation_t1.txt
src/log/2022-March-26-16:58:19/T2-2022-March-26-17:01:03/: position_t2.txt
src/log/2022-March-26-18:43:58/T1-2022-March-26-19:01:59/: position_t1.txt  targetlocation_t1.txt
src/log/2022-March-26-18:43:58/T2-2022-March-26-19:02:01/: position_t2.txt
src/log/2022-March-26-19:06:25/T1-2022-March-26-19:09:17/: position_t1.txt  targetlocation_t1.txt
src/log/2022-March-26-19:06:25/T2-2022-March-26-19:09:18/: position_t2.txt
src/log/2022-March-26-20:05:26/T1-2022-March-26-20:08:48/: position_t1.txt  targetlocation_t1.txt
src/log/2022-March-26-20:05:26/T2-2022-March-26-20:08:50/: position_t2.txt
src/log/2022-March-26-20:15:31/T1-2022-March-26-20:18:54/: position_t1.txt  targetlocation_t1.txt
src/log/2022-March-26-20:15:31/T1-2022-March-26-21:17:50/: position_t1.txt  targetlocation_t1.txt
src/log/2022-March-26-20:15:31/T1-2022-March-26-21:26:10/: position_t1.txt  targetlocation_t1.txt
src/log/2022-March-26-20:15:31/T2-2022-March-26-20:18:55/: position_t2.txt
src/log/2022-March-26-20:15:31/T2-2022-March-26-21:17:51/: position_t2.txt
src/log/2022-March-26-20:15:31/T2-2022-March-26-21:26:11/: position_t2.txt
src/log/2022-March-27-10:36:57/T1-2022-March-27-10:39:45/: position_t1.txt  targetlocation_t1.txt
src/log/2022-March-27-10:36:57/T1-2022-March-27-10:50:13/: position_t1.txt  targetlocation_t1.txt
src/log/2022-March-27-10:36:57/T2-2022-March-27-10:39:46/: position_t2.txt
src/log/2022-March-27-10:36:57/T2-2022-March-27-10:50:14/: position_t2.txt
src/log/2022-March-27-10:52:46/T1-2022-March-27-10:55:24/: position_t1.txt  targetlocation_t1.txt
src/log/2022-March-27-10:52:46/T1-2022-March-27-11:00:45/: position_t1.txt  targetlocation_t1.txt
src/log/2022-March-27-10:52:46/T2-2022-March-27-10:55:25/: position_t2.txt
src/log/2022-March-27-10:52:46/T2-2022-March-27-11:00:46/: position_t2.txt
src/log/2022-March-27-11:10:08/T1-2022-March-27-11:12:36/: position_t1.txt  targetlocation_t1.txt
src/log/2022-March-27-11:10:08/T1-2022-March-27-11:17:32/: position_t1.txt  targetlocation_t1.txt
src/log/2022-March-27-11:10:08/T2-2022-March-27-11:12:37/: position_t2.txt
src/log/2022-March-27-11:10:08/T2-2022-March-27-11:17:32/: position_t2.txt
src/log/2022-March-27-12:01:22/T1-2022-March-27-12:03:56/: position_t1.txt  targetlocation_t1.txt
src/log/2022-March-27-12:01:22/T1-2022-March-27-12:08:20/: position_t1.txt  targetlocation_t1.txt
src/log/2022-March-27-12:01:22/T2-2022-March-27-12:03:56/: position_t2.txt
src/log/2022-March-27-12:01:22/T2-2022-March-27-12:08:21/: position_t2.txt
src/log/2022-March-27-14:43:53/T1-2022-March-27-14:48:04/: position_t1.txt  targetlocation_t1.txt
src/log/2022-March-27-14:43:53/T2-2022-March-27-14:48:04/: position_t2.txt
src/log/2022-March-27-16:57:20/T1-2022-March-27-17:02:51/: position_t1.txt  targetlocation_t1.txt
src/log/2022-March-27-16:57:20/T2-2022-March-27-17:02:51/: position_t2.txt
src/log/2022-March-31-12:06:02/T1-2022-March-31-12:07:46/: position_t1.txt  targetlocation_t1.txt
src/log/2022-March-31-12:06:02/T2-2022-March-31-12:07:47/: position_t2.txt
src/log/2022-March-31-14:38:13/T1-2022-March-31-14:39:00/: position_t1.txt  targetlocation_t1.txt
src/log/2022-March-31-14:38:13/T2-2022-March-31-14:39:01/: position_t2.txt
src/log/2022-March-31-14:47:48/T1-2022-March-31-14:49:03/: position_t1.txt  targetlocation2_t1.txt  targetlocation_t1.txt
src/log/2022-March-31-14:47:48/T2-2022-March-31-14:49:03/: position_t2.txt
src/log/2022-March-31-15:06:46/T1-2022-March-31-15:07:31/: position_t1.txt  targetlocation2_t1.txt  targetlocation_t1.txt
src/log/2022-March-31-15:06:46/T2-2022-March-31-15:07:31/: position_t2.txt
src/log/2022-March-31-15:45:30/T1-2022-March-31-15:46:00/: position_t1.txt  targetlocation2_t1.txt  targetlocation_t1.txt
src/positioning/: CMakeLists.txt  package.xml
src/positioning/include/: 2DMovementKalmanFilter.h  CameraAndPhyPointTransformer.h  ThreeDMovementKalmanFilter.h  positioning.h
src/positioning/src/: 2DMovementKalmanFilter.cpp  ThreeDMovementKalmanFilter.cpp  positioning.cpp
src/qt/: CMakeLists.txt  package.xml
src/qt/include/: 2DMovementKalmanFilter.h  CameraAndPhyPointTransformer.h  planning.h  targetPosition.h
src/qt/include/qt/: mainwindow.h
src/qt/src/: 2DMovementKalmanFilter.cpp  CameraAndPhyPointTransformer.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  planning.cpp  targetPosition.cpp
(+345 files in other folders)
